test/type_error/procedure_binop.rqcpp
qbits q[1]

procedure P():
    skip

procedure main():
    x = 1 + P